# Yuumy

./: app.py  pyproject.toml
multirec/: README.md  requirements.txt
multirec/config/: config.py
multirec/docs/: index.md
multirec/multirec/config/: config.py
multirec/multirec/db/: database.py
multirec/multirec/recorder/: recorder.py
multirec/multirec/scheduler/: scheduler.py
multirec/multirec/ui/: main_window.py
multirec/recorder/: recorder.py
multirec/scheduler/: scheduler.py
multirec/utils/: logger.py
tests/: conftest.py  test_config.py  test_scheduler.py
