[tool.poetry]
name = "multirec"
version = "0.1.0"
description = "Grabador de streams múltiple"
authors = ["Tu Nombre <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.5"
yt-dlp = "^2024.0"
ffmpeg-python = "^0.2"
pydantic = "^1.10"
aiosqlite = "^0.19"
PyYAML = "^6.0"
structlog = "^23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
ruff = "^0.1.0"
black = "^23.7"
mypy = "^1.4"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"